# ScrapingHoteis_123milhas

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
api/extract/: index.html
api/load/: index.html
api/transform/: index.html
app/: main.py
app/etl/: pipeline.py  utils.py
app/etl/extract/: scraping.py
app/etl/load/: gerar_dados.py
app/etl/transform/: gerar_tabela.py
app/extract/: scraping.py
app/load/: gerar_excel.py
app/transform/: gerar_tabela.py
data/: scraping_123milhas_01-4-2024_01-4-2024.parquet  scraping_123milhas_01-4-2024_01-4-2024.xlsx  scraping_123milhas_28_02_2024.xlsx
docs/: download.md  index.md  sobremim.md
docs/api/: extract.md  load.md  transform.md
download/: index.html
sobremim/: index.html
tests/: test_app_utils.py
